Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -160,7 +160,8 @@
    "source": [
     "# Your code here\n",
     "from sklearn import svm\n",
-    "clf = svm.SVC(kernel='linear', C = 1.0)\n"
+    "clf = svm.SVC(kernel='linear', C = 1.0)\n",
+    "clf.fit(X,y)\n"
    ]
   },
   {
